--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,7 +62,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/Miepedas" />
+                        android:src="@drawable/miepedas" />
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/Miepedas" />
+                        android:src="@drawable/miepedas" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -111,7 +111,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/Miepedas" />
+                        android:src="@drawable/miepedas" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -136,7 +136,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/Miepedas" />
+                        android:src="@drawable/miepedas" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -161,7 +161,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/Miepedas" />
+                        android:src="@drawable/miepedas" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -186,7 +186,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="180dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/Miepedas" />
+                        android:src="@drawable/miepedas" />
 
                     <TextView
                         android:layout_width="match_parent"
