--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -144,12 +144,13 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:hint="Nomor telepon"
-                android:inputType="phone"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
                 android:padding="0dp"
                 android:textColor="#333333"
                 android:textColorHint="#999999"
                 android:textSize="16sp" />
+
 
         </LinearLayout>
 
